--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "nl-marshal",
-	"version": "0.1.0",
+	"version": "0.2.0-rc.2",
 	"description": "Simple NodeJS utility to serialize or deserialize JS objects to Buffer or JSON.",
 	"main": "lib/index.js",
 	"scripts": {
@@ -9,9 +9,11 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
-		"bignumber.js": "^9.0.0"
+		"bignumber.js": "^9.0.0",
+		"bs58": "^4.0.1"
 	},
 	"devDependencies": {
+		"@types/bs58": "^4.0.0",
 		"@types/node": "^12.7.12",
 		"ts-node": "^8.4.1",
 		"typescript": "^3.6.3"
