--- a/.npmignore
+++ b/.npmignore
@@ -1,1 +1,9 @@
+node_modules/
 src/
+.gitignore
+.prettierignore
+.prettierrc.json
+eslint.config.mjs
+tsconfig.json
+tsconfig.tsbuildinfo
+yarn.lock
