--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
   "name": "nl-marshal",
-  "version": "0.6.0",
+  "version": "1.0.0",
   "description": "Simple NodeJS utility to serialize or deserialize JS objects to Buffer or JSON",
+  "author": "NickLatkovich",
+  "license": "MIT",
   "main": "lib/index.js",
+  "dependencies": {
+    "bs58": "^6.0.0"
+  },
   "scripts": {
     "build": "rm -rf ./lib && rm -f ./tsconfig.tsbuildinfo && tsc",
     "prepublishOnly": "npm run build",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
-    "typescript": "^5.9.3"
-  },
-  "author": "NickLatkovich",
-  "license": "MIT",
-  "dependencies": {
-    "bs58": "^6.0.0"
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "prettier": "^3.7.4",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.52.0"
   }
 }
